@@ -3,6 +3,10 @@ Major:
 * Fix precrafted amount
 * Implement Metallurgist and Chemist traits
 
+Themes:
+* New theme: Unicorn
+* Add an option in order to move tooltip in right column, like Sleek does by default
+
 Minor:
 * Gear icon will now have a toggle indicator
 * Fix options dialog overflow
@@ -18,8 +22,8 @@ Major:
 * Do not refund AM if energy is negative
 
 Themes:
-* New themes: Gold, Space, Wood, School, Fluid, Vessel, Minimalist, Oil, Unicorn
-* All themes except Classic and Inverted have to be unlocked (permanent unlock)
+* New themes: Gold, Space, Wood, School, Fluid, Vessel, Minimalist, Oil
+* All themes except Classic/Inverted/Grassy/Sleek have to be unlocked (permanent unlock)
 * Add an option in order to hide background image (if applicable)
 * Theme will now apply to the loading screen
 
